align video to top-left and remove webkit-appearance styling to prevent gap between left of content and left of window

--- a/bertha_site.css
+++ b/bertha_site.css
@@ -47,13 +47,16 @@ span.alt-color {
   color: white;
 }
 
+/*
+IN CHROME THIS CAUSES A GAP ON THE RIGHT HAND SIDE BETWEEN THE PAGE CONTENT AND THE BROWSER WINDOW
 ::-webkit-scrollbar {
-    -webkit-appearance: none;
+    -webkit-appearance: none;     
     width: 7px;
-}
+}Í
+*/
 
 ::-webkit-scrollbar-thumb {
-    border-radius: 4px;
+    border-radius: 4px;   
     background-color: rgba(0,0,0,.5);
     -webkit-box-shadow: 0 0 1px rgba(255,255,255,.5);
 }
@@ -62,16 +65,9 @@ video.bannerVideo {
   display: block;
   min-height: 100%;
   min-width: 100%;
-  position: relative;
-  -ms-transform: translate(0,-100%);
-  -webkit-transform: translate(0,-100%);
-  -moz-transform: translate(0,-100%);
-  transform: translate(0,-100%);
+  position: absolute;
+  top: 0px;
   overflow: hidden;
   z-index: 100;
-}
 
-#map-not-loaded-msg {
-  position: fixed;
-  background-color: red;
 }
